ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: formiodev
  annotations: 
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "content-type, cache-control, pragma, x-remote-token"
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: formiodev.<CLUSTER_SPECIFIC_DNS_ZONE>
    http:
      paths:
      - backend:
          serviceName: formio-server
          servicePort: 80
        path: /
